[tool.poetry]
name = "ada-cbf"
version = "0.1.0"
description = "Gaussian Process Adaptive CBF"
authors = ["zwc662 <zwc662@gmail.com>"]
readme = "README.md"
packages = [ 
    { include = "../"}
    ]

[tool.poetry.dependencies]
python = "^3.10"
f110-gym = {path = "f1tenth_gym", develop = true}
ipdb = "^0.13.13"
numpy = "1.26.4"
jax = {extras = ["cuda"], version = "^0.4.31"}
optax = "^0.2.3"
flax = "^0.9.0"
chex = "^0.1.86"
typer = "^0.12.5"
python-git = "^2018.2.1"
gitpython = "^3.1.43"
efppo = {path = "efppo", develop = true}
setuptools = "65.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
